src/app/missions/missions.component.css
.container {
    display: grid;
    overflow: scroll;
    background-color: #dee0df;
}

.card-container {
    display: grid;
    margin-top: 5px;
}

/* For tablets */
@media (min-width: 700px) {
    .container {
        display: grid;
        background-color: #dee0df;
        grid-template-columns: 1fr 2fr;
        overflow: scroll;
    }
    .card-section {
        margin-top: -5px;
    }

    .card-container {
        grid-template-columns: 1fr 1fr;
    }
}

/* For desktops */
@media (min-width: 1024px) {
    .container {
        display: grid;
        background-color: #dee0df;
        grid-template-columns: 1fr 3fr;
        overflow: scroll;
    }

    .card-container {
        grid-template-columns: 1fr 1fr 1fr 1fr;
    }
}

.loader {
    border: 16px solid #f3f3f3;
    border-radius: 50%;
    border-top: 16px solid gray;
    width: 80px;
    height: 80px;
    -webkit-animation: spin 2s linear infinite; /* Safari */
    animation: spin 2s linear infinite;
  }
  
  /* Safari */
  @-webkit-keyframes spin {
    0% { -webkit-transform: rotate(0deg); }
    100% { -webkit-transform: rotate(360deg); }
  }
  
  @keyframes spin {
    0% { transform: rotate(0deg); }
    100% { transform: rotate(360deg); }
  }

